2004-05-24  Mark Kettenis  <kettenis@gnu.org>

	Add OpenBSD/m88k support.
	* NEWS (New native configurations): Mention OpenBSD/m88k.
	* m88k-tdep.c, m88k-tdep.h, m88kbsd-nat.c, config/m88k/nm-obsd.h,
	config/m88k/obsd.mh, config/m88k/obsd.mt: New files.
	* Makefile.in (m88k_tdep_h): New variable.
	(ALLDEPFILES): Add m88k-tdep.c and m88kbsd-nat.c.
	(m88kbsd-nat.o, m88k-tdep.o): New dependencies.
	* configure.host: Add m88*-*-openbsd*.
	* configure.tgt: Add m88*-*-openbsd*.

2004-05-24  Jim Blandy  <jimb@redhat.com>

	* MAINTAINERS (tracing bytecode stuff): Allow global maintainers
	to approve changes.

2004-05-24  Kevin Buettner  <kevinb@redhat.com>

	* symtab.c (fixup_section): Search section table when lookup by
	name fails.

2004-05-24  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c: Fix handling of 8-byte structures; they should not 
	be "small_struct".

2004-05-24  Mark Kettenis  <kettenis@gnu.org>

	* m68kbsd-nat.c (m68kbsd_collect_gregset): Specify correct
	register number in regcache_raw_collect call.
	(m68kbsd_collect_fpregset): Likewise.
	* vaxbsd-nat.c (vaxbsd_collect_gregset): Likewise.

	* regset.h (struct regset): Add back `regset' member.

2004-05-23  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Check for td_pcb in `struct thread'.
	* configure, config.in: Regenerated.

	* dpx2-nat.c: Remove file.
	* Makefile.in (ALLDEPFILES): Remove dpx2-nat.c.
	(dpx2-nat.o): Remove dependencies.

	* amd64obsd-nat.c: Include "gdbcore.h", "regcache.h",
	<sys/types.h>, <machine/frame.h>, <machine/pcb.h> and "bsd-kvm.h".
	(amd64obsd_supply_pcb): New function.
	(_initialize_amd64obsd_nat): Enable libkvm interface.
	* Makefile.in (amd64obsd-nat.o): Update dependencies.
	* config/i386/obsd64.mh (NATDEPFILES): Add bsd-kvm.o
	(LOADLIBES): New variable.

	* sparcnbsd-nat.c: Include "gdbcore.h", "regcache.h",
	<sys/types.h>, <machine/pcb.h> and "bsd-kvm.h".
	(sparc32nbsd_supply_pcb): New function.
	(_initialize_sparcnbsd_nat): Enable libkvm interface.